--- a/views/partials/likes-evil.handlebars
+++ b/views/partials/likes-evil.handlebars
@@ -1,15 +1,18 @@
-<h3>Likes</h3>
+<div class="col-xs-6">
+	<h3>Likes</h3>
 
-<ul>
-	<li>Blood</li>
-	<li>Suffering</li>
-	<li>Storms</li>
-</ul>
+	<ul>
+		<li>Blood</li>
+		<li>Suffering</li>
+		<li>Storms</li>
+	</ul>
+</div>
+<div class="col-xs-6">
+	<h3>Dislikes</h3>
 
-<h3>Dislikes</h3>
-
-<ul>
-	<li>Philanthropy</li>
-	<li>Gorgaphone the Kitten</li>
-	<li>Modular code</li>
-</ul>
+	<ul>
+		<li>Philanthropy</li>
+		<li>Gorgaphone the Kitten</li>
+		<li>Modular code</li>
+	</ul>
+</div>
