--- a/views/partials/likes-evil.handlebars
+++ b/views/partials/likes-evil.handlebars
@@ -5,6 +5,9 @@
 		<li>Blood</li>
 		<li>Suffering</li>
 		<li>Storms</li>
+		{{#if favorite-food}}
+    <li>{{favorite-food}}</li>
+    {{/if}}
 	</ul>
 </div>
 <div class="col-xs-6">
