--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,9 @@
 	<!-- if evil, evil.css... -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Great+Vibes"  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ceviche+One" rel="stylesheet">
+	<link href='{{alignment}}Font.css' rel="stylesheet">
 </head>
 <body>
 	<!-- Form -->
@@ -17,7 +20,7 @@
 			<label for="favorite-food">Favorite Food:</label>
 			<input type="text" name="favorite-food">
 
-			<select>
+			<select name="favoriteColor">
 				<option>Black</option>
 				<option>White</option>
 			</select>
