--- a/views/partials/likes-good.handlebars
+++ b/views/partials/likes-good.handlebars
@@ -4,6 +4,9 @@
 	<li>Puppies</li>
 	<li>Kittens</li>
 	<li>Rainbows</li>
+  {{#if favorite-food}}
+    <li>{{favorite-food}}</li>
+    {{/if}}
 </ul>
 
 <h3>Dislikes</h3>
