added color options and started insanity options

--- a/views/partials/likes-good.handlebars
+++ b/views/partials/likes-good.handlebars
@@ -1,18 +1,21 @@
-<h3>Likes</h3>
+<div class="col-xs-6">
+	<h3>Likes</h3>
 
-<ul>
-	<li>Puppies</li>
-	<li>Kittens</li>
-	<li>Rainbows</li>
-  {{#if favorite-food}}
-    <li>{{favorite-food}}</li>
-    {{/if}}
-</ul>
+	<ul>
+		<li>Puppies</li>
+		<li>Kittens</li>
+		<li>Rainbows</li>
+	  {{#if favorite-food}}
+	    <li>{{favorite-food}}</li>
+	    {{/if}}
+	</ul>
+</div>
+<div class="col-xs-6">
+	<h3>Dislikes</h3>
 
-<h3>Dislikes</h3>
-
-<ul>
-	<li>Mean people</li>
-	<li>Pollution</li>
-	<li>Using exports instead of module.exports</li>
-</ul>
+	<ul>
+		<li>Mean people</li>
+		<li>Pollution</li>
+		<li>Using exports instead of module.exports</li>
+	</ul>
+</div>
