--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Great+Vibes"  rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ceviche+One" rel="stylesheet">
-	<link href='{{alignment}}Font.css' rel="stylesheet">
+	<link href='stylesheets/{{alignment}}Font.css' rel="stylesheet">
+	<link href='stylesheets/{{favoriteColor}}.css' rel="stylesheet">
+	<style>
+		body {
+			background-image: url("./images/insanity{{insanity}}.jpg");
+		}
+	</style>
 </head>
 <body>
 	<!-- Form -->
@@ -21,8 +27,9 @@
 			<input type="text" name="favorite-food">
 
 			<select name="favoriteColor">
-				<option>Black</option>
-				<option>White</option>
+				<option></option>
+				<option>white</option>
+				<option>black</option>
 			</select>
 
 			<label for="insanity">Insanity Level:</label>
