--- a/public/stylesheets/black.css
+++ b/public/stylesheets/black.css
@@ -1,4 +1,6 @@
 main {
-	background-color: rgba(0, 0, 0, 0.9);
+	
+  /*background-color: rgba(0, 0, 0, 0.9);*/
+  background-color: black;
 	color: white
 }
