--- a/public/stylesheets/white.css
+++ b/public/stylesheets/white.css
@@ -1,4 +1,9 @@
 main {
-	background-color: rgba(255, 255, 255, 0.9)
+	/*
+  background-color: rgba(255, 255, 255, 0.9)
 	color: black;
+  */
+  background-color: white;
+  color: black;
+
 }
