--- a/views/partials/likes-evil.handlebars
+++ b/views/partials/likes-evil.handlebars
@@ -6,8 +6,11 @@
 		<li>Suffering</li>
 		<li>Storms</li>
 		{{#if favorite-food}}
-    <li>{{favorite-food}}</li>
+    	<li>{{favorite-food}}</li>
     {{/if}}
+    {{#if insane}}
+			<li>The voices in your head 8)</li>
+		{{/if}}
 	</ul>
 </div>
 <div class="col-xs-6">
@@ -17,5 +20,8 @@
 		<li>Philanthropy</li>
 		<li>Gorgaphone the Kitten</li>
 		<li>Modular code</li>
+		{{#if insane}}
+			<li>Thorazine 8(</li>
+		{{/if}}
 	</ul>
 </div>
