--- a/views/partials/likes-good.handlebars
+++ b/views/partials/likes-good.handlebars
@@ -7,7 +7,10 @@
 		<li>Rainbows</li>
 	  {{#if favorite-food}}
 	    <li>{{favorite-food}}</li>
-	    {{/if}}
+	  {{/if}}
+	  {{#if insane}}
+			<li>Giving glitter to orphans (ﾉ◕ヮ◕)ﾉ*:・ﾟ✧</li>
+		{{/if}}
 	</ul>
 </div>
 <div class="col-xs-6">
@@ -17,5 +20,8 @@
 		<li>Mean people</li>
 		<li>Pollution</li>
 		<li>Using exports instead of module.exports</li>
+		{{#if insane}}
+			<li>The disembodied floating frowny face over your shoulder 8( (artist's representation)</li>
+		{{/if}}
 	</ul>
 </div>
