--- a/views/partials/resume-evil.handlebars
+++ b/views/partials/resume-evil.handlebars
@@ -4,4 +4,7 @@
 	<li>Youth Leader, Westboro Baptist Church in high school</li>
 	<li>Internship at Enron in college</li>
 	<li>Hedge Fund Manager</li>
+	{{#if insane}}
+		<li>Megalomaniac 2015 - present</li>
+	{{/if}}
 </ul>
