--- a/views/partials/resume-good.handlebars
+++ b/views/partials/resume-good.handlebars
@@ -4,4 +4,7 @@
 	<li>Lifeguard in high school</li>
 	<li>TA in college</li>
 	<li>Social worker</li>
+	{{#if insane}}
+		<li>Dragon dentist (it's a living)</li>
+	{{/if}}
 </ul>
