--- a/views/partials/likes-evil.handlebars
+++ b/views/partials/likes-evil.handlebars
@@ -11,6 +11,9 @@
     {{#if insane}}
 			<li>The voices in your head 8)</li>
 		{{/if}}
+		{{#if boring}}
+      <li>Littering.</li>
+    {{/if}}
 	</ul>
 </div>
 <div class="col-xs-6">
@@ -23,5 +26,8 @@
 		{{#if insane}}
 			<li>Thorazine 8(</li>
 		{{/if}}
+		{{#if boring}}
+      <li>Children's laughter.</li>
+    {{/if}}
 	</ul>
 </div>
