--- a/views/partials/likes-good.handlebars
+++ b/views/partials/likes-good.handlebars
@@ -11,6 +11,9 @@
 	  {{#if insane}}
 			<li>Giving glitter to orphans (ﾉ◕ヮ◕)ﾉ*:・ﾟ✧</li>
 		{{/if}}
+    {{#if boring}}
+      <li>Doing taxes.  FUCK YEAH!!!</li>
+    {{/if}}
 	</ul>
 </div>
 <div class="col-xs-6">
@@ -23,5 +26,8 @@
 		{{#if insane}}
 			<li>The disembodied floating frowny face over your shoulder 8( (artist's representation)</li>
 		{{/if}}
+    {{#if boring}}
+      <li>Jaywalking</li>
+    {{/if}}
 	</ul>
 </div>
