--- a/views/partials/resume-evil.handlebars
+++ b/views/partials/resume-evil.handlebars
@@ -7,4 +7,7 @@
 	{{#if insane}}
 		<li>Megalomaniac 2015 - present</li>
 	{{/if}}
+  {{#if boring}}
+      <li>DMV clerk, 2015-present</li>
+  {{/if}}
 </ul>
