--- a/views/partials/resume-good.handlebars
+++ b/views/partials/resume-good.handlebars
@@ -7,4 +7,7 @@
 	{{#if insane}}
 		<li>Dragon dentist (it's a living)</li>
 	{{/if}}
+  {{#if boring}}
+    <li>Dentist.  For humans.</li>
+  {{/if}}
 </ul>
